Changled selected option from alert to modal using react-modal

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "live-server": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal": "^2.2.2",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
