--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "webpack": "^3.11.0"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^2.5.1"
   },
