--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "live-server": "^1.2.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^2.2.2",
